force-app/main/default/objects/WheelHub__c/WheelHub__c.object-meta.xml
<CustomObject>
    <label>Wheel Hub</label>
    <nameField>
        <label>Hub</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wheel Hubs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>