force-app/main/default/objects/WheelHub__c/fields/GeometricForm__c.field-meta.xml
<CustomField>
    <fullName>GeometricForm__c</fullName>
    <label>Geometric Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Round</fullName>
            </value>
            <value>
                <fullName>Rectangular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>