force-app/main/default/objects/WheelHub__c/fields/HubSize__c.field-meta.xml
<CustomField>
    <fullName>HubSize__c</fullName>
    <formula>CASE(TEXT(GeometricForm__c),
					&apos;Round&apos;, SUBSTITUTE(TEXT(ROUND(OD_mm__c,1)),&apos;,&apos;,&apos;.&apos;),
					Name
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hub Size</label>
    <type>Text</type>
</CustomField>