force-app/main/default/objects/WheelHub__c/fields/L_mm__c.field-meta.xml
<CustomField>
    <fullName>L_mm__c</fullName>
    <label>L (mm)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>