force-app/main/default/objects/WheelHub__c/fields/OD_mm__c.field-meta.xml
<CustomField>
    <fullName>OD_mm__c</fullName>
    <label>OD (mm)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>