force-app/main/default/objects/WheelHub__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ID_ERP__c</columns>
    <columns>H_mm__c</columns>
    <columns>L_mm__c</columns>
    <columns>OD_mm__c</columns>
    <columns>HubSize__c</columns>
    <columns>GeometricForm__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>